Replace new Long with Long.valueOf.