@@ -353,12 +353,12 @@ public final class SearchGroupItemQueryBuilder {
               String ageNamedParameter =
                   QueryParameterUtil.addQueryParameterValue(
                       queryParams,
-                      QueryParameterValue.int64(new Long(attribute.getOperands().get(0))));
+                      QueryParameterValue.int64(Long.valueOf(attribute.getOperands().get(0))));
               if (attribute.getOperands().size() > 1) {
                 String ageNamedParameter1 =
                     QueryParameterUtil.addQueryParameterValue(
                         queryParams,
-                        QueryParameterValue.int64(new Long(attribute.getOperands().get(1))));
+                        QueryParameterValue.int64(Long.valueOf(attribute.getOperands().get(1))));
                 ageNamedParameter = ageNamedParameter + AND + ageNamedParameter1;
               }
               String ageSql =
@@ -660,7 +660,7 @@ public final class SearchGroupItemQueryBuilder {
             QueryParameterUtil.addQueryParameterValue(
                 queryParams,
                 (isAgeAtEvent(modifier) || isEncounters(modifier) || isCati(modifier))
-                    ? QueryParameterValue.int64(new Long(operand))
+                    ? QueryParameterValue.int64(Long.valueOf(operand))
                     : QueryParameterValue.date(operand));
         modifierParamList.add(modifierParameter);
       }
@@ -706,7 +706,7 @@ public final class SearchGroupItemQueryBuilder {
       for (String operand : occurrences.getOperands()) {
         String modifierParameter =
             QueryParameterUtil.addQueryParameterValue(
-                queryParams, QueryParameterValue.int64(new Long(operand)));
+                queryParams, QueryParameterValue.int64(Long.valueOf(operand)));
         modifierParamList.add(modifierParameter);
       }
       modifierSql
